<resources>
    <string name="app_name">Emoji Recommender</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="description_start_pet_icon">Pet icon of initial screen</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="places">Places</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slide Show</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile_image">Profile image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="purple_icon_app">Purple icon app</string>
    <string name="find_your_pet_or_get_one">Econtre o seu amiginho perdido ou doe um pet</string>
    <string name="placeholder_user_name">User Name</string>
    <string name="placeholder_time_post">2h</string>
    <string name="button_follow">Follow</string>
    <string name="placeholder_text_post">Body 2: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="placeholder_number_long_example">1,232</string>
    <string name="button_comments">Comments</string>
    <string name="placeholder_short_number">345</string>
    <string name="shares">Shares</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="placeholder_short_short_number">8</string>
    <string name="separator_like_reply">|</string>
    <string name="reply">Reply</string>
    <string name="placeholder_reply_example">8 replies</string>
    <string name="show_more">Show more…</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="publish">Publish</string>
    <string name="notification">Notification</string>
    <string name="title_activity_publish_fragment">PublishFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_public">PublicActivity</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dialog_sending_email">Sending email…</string>
    <string name="toast_dont_sent_email">It was not possible to send the email</string>
    <string name="dialog_logging_in">Logging in …</string>
    <string name="toast_autenticaton_failed">Authentication failed</string>
    <string name="email_sent">Email Sent</string>
    <string name="dialog_creating_account">Creating Account</string>
    <string name="logout">Logout</string>
    <string name="phone">Phone</string>
    <string name="chat">Chat</string>
    <string name="online">Online</string>
    <string name="start_typing">Start Typing</string>
    <string name="enter_post_description">Enter post description</string>
    <string name="post">Post</string>
    <string name="edit_profile">Edit Profile</string>
</resources>