<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/img_profile" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@color/black_38"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_comment_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/placeholder_user_name"
                    android:textColor="@color/black_87"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_time_post"
                        android:textColor="@color/black_60"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <ImageView
                        android:layout_width="4dp"
                        android:layout_height="4dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="3dp"
                        android:src="@drawable/ic_sharp_brightness_1_24"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="3dp"
                        android:src="@drawable/ic_baseline_public_24"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/placeholder_text_post"
                    android:textColor="@color/black_87"
                    android:textSize="11sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="39dp"
            android:layout_height="35dp"
            android:text="@string/like"
            android:textAllCaps="false"
            android:textColor="@color/black_60"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <ImageView
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_sharp_brightness_1_24"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_outline_favorite_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_short_short_number"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/separator_like_reply" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/reply"
            android:textAllCaps="false"
            android:textColor="@color/black_60"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <ImageView
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_sharp_brightness_1_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_reply_example"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
</LinearLayout>