<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_post"
    tools:context=".ui.fragment.PostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <!-- header -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- profile image -->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/post_img_user"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_default_img_while_dark" />

                <!-- text details -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- user name -->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/post_mtv_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        tools:text="@string/placeholder_user_name"
                        android:textColor="@color/black_87"
                        android:textSize="20sp" />

                </LinearLayout>

                <!-- post button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/post_btn_post"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.4"
                    android:text="@string/post" />

            </LinearLayout>

            <!-- post description -->
            <EditText
                android:id="@+id/post_et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/enter_post_description"
                android:inputType="textCapSentences|textMultiLine"
                android:minHeight="50dp"
                android:padding="10dp"
                tools:ignore="Autofill" />

            <!-- post image -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/post_iv_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <!-- post video -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical">

                <VideoView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_pet_photo"
                    android:minHeight="100dp"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:minHeight="52dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/post_ibtn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_menu_camera"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/post_ibtn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_image_24"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</RelativeLayout>